--- a/1.0/_mixin.scss
+++ b/1.0/_mixin.scss
@@ -18,6 +18,14 @@
   }
 }
 
+@mixin grid-pull-x($gridColumns, $gridColumnWidth, $gridGutterWidth) {
+  @for $i from 1 through $gridColumns {
+    .pull#{$i} {
+      @include grid-pull($i, $gridColumnWidth, $gridGutterWidth);
+    }
+  }
+}
+
 @mixin grid-span($columns, $gridColumnWidth, $gridGutterWidth) {
   display: inline-block;
   vertical-align: top;
@@ -34,4 +42,9 @@
 
 @mixin grid-offset-right($columns, $gridColumnWidth, $gridGutterWidth) {
   margin-right: ($gridColumnWidth + $gridGutterWidth) * $columns;
+}
+
+@mixin grid-pull($columns, $gridColumnWidth, $gridGutterWidth) {
+  position: relative;
+  left: -($gridColumnWidth + $gridGutterWidth) * $columns;
 }
